tests/build/cases/property/input_no_debug.stderr
error[E0277]: the trait bound `NoDebug: Clone` is not satisfied
   --> cases/property/input_no_debug.rs:14:37
    |
14  | pub fn bar(child: impl UiNode, bar: NoDebug) -> impl UiNode {
    |                                     ^^^^^^^ the trait `Clone` is not implemented for `NoDebug`
    |
note: required by a bound in `allowed_in_when_property_requires_IntoVar_members`
   --> $WORKSPACE/zero-ui-core/src/var.rs
    |
    | pub trait IntoVar<T: VarValue>: Clone {
    |                                 ^^^^^ required by this bound in `allowed_in_when_property_requires_IntoVar_members`
help: consider annotating `NoDebug` with `#[derive(Clone)]`
    |
3   | #[derive(Clone)]
    |

error[E0277]: `NoDebug` doesn't implement `Debug`
  --> cases/property/input_no_debug.rs:14:37
   |
14 | pub fn bar(child: impl UiNode, bar: NoDebug) -> impl UiNode {
   |                                     ^^^^^^^ `NoDebug` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoDebug`
   = note: add `#[derive(Debug)]` to `NoDebug` or manually `impl Debug for NoDebug`
   = help: the following other types implement trait `IntoVar<T>`:
             <&'static [u8; N] as IntoVar<ImageSource>>
             <&'static [u8; N] as IntoVar<WindowIcon>>
             <&'static [u8] as IntoVar<ImageSource>>
             <&'static [u8] as IntoVar<WindowIcon>>
             <&'static str as IntoVar<FontName>>
             <&'static str as IntoVar<FontNames>>
             <&'static str as IntoVar<GlyphSource>>
             <&'static str as IntoVar<WidgetId>>
           and 408 others
   = note: required because of the requirements on the impl of `VarValue` for `NoDebug`
   = note: required because of the requirements on the impl of `IntoVar<NoDebug>` for `NoDebug`
help: consider annotating `NoDebug` with `#[derive(Debug)]`
   |
3  | #[derive(Debug)]
   |

error[E0308]: mismatched types
  --> cases/property/input_no_debug.rs:14:37
   |
13 | #[property(context)]
   | -------------------- arguments to this function are incorrect
14 | pub fn bar(child: impl UiNode, bar: NoDebug) -> impl UiNode {
   |                                     ^^^^^^^ expected struct `NoDebug`, found struct `LocalVar`
   |
   = note: expected struct `NoDebug`
              found struct `LocalVar<NoDebug>`
note: associated function defined here
  --> cases/property/input_no_debug.rs:13:1
   |
13 | #[property(context)]
   | ^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
